
=== Fixes

* fix: Fix equality and hash code for ShardKey with array key (#638), resolves (#579)
* fix: Fix target loading computation for inflight records (#662)
* fix: Fix synchronisation logic for transactional producer commit affecting non-transactional usage (#665), resolves (#637)
* fix: Fix for race condition in partition state clean/dirty tracking (#666), resolves (#664)

== 0.5.2.7

=== Fixes

* fix: Return cached pausedPartitionSet (#620), resolves (#618)
* fix: Parallel consumer stops processing data sometimes (#623), fixes (#606)
* fix: Add synchronization to ensure proper intializaiton and closing of PCMetrics singleton (#627), fixes (#617)
* fix: Readme - metrics example correction (#614)
* fix: Remove micrometer-atlas dependency (#628), fixes (#625)

=== Improvements

* Refactored metrics implementation to not use singleton - improves meter separation, allows correct metrics subsystem operation when multiple parallel consumer instances are running in same java process (#630), fixes (#617) improves on (#627)

== 0.5.2.6
=== Improvements

* feature: Micrometer metrics (#594)
* feature: Adds an option to pass an invalid offset metadata error policy (#537), improves (#326)
* feature: Lazy intialization of workerThreadPool (#531)

=== Fixes

* fix: Don't drain mode shutdown kills inflight threads (#559)
* fix: Drain mode shutdown doesn't pause consumption correctly (#552)
* fix: RunLength offset decoding returns 0 base offset after no-progress commit - related to (#546)
* fix: Transactional PConsumer stuck while rebalancing - related to (#541)

=== Dependencies

* PL-211: Update dependencies from dependabot, Add mvnw, use mvnw in jenkins (#583)
* PL-211: Update dependencies from dependabot (#589)

== 0.5.2.5

=== Fixes

* fixes: #195 NoSuchFieldException when using consumer inherited from KafkaConsumer (#469)
* fix: After new performance fix PR#530 merges - corner case could cause out of order processing (#534)